--- a/requirements.txt
+++ b/requirements.txt
@@ -2,8 +2,13 @@ Flask==3.0.0
 Flask-SQLAlchemy==3.1.1
 Flask-WTF==1.2.1
 Flask-Migrate==4.0.5
+Flask-Talisman==1.1.0
 Pillow==10.1.0
 PyPDF2==3.0.1
 python-dotenv==1.0.0
 requests==2.31.0
 Werkzeug==3.0.1
+email-validator==2.1.0.post1
+markdown==3.5.1
+pytz==2023.3.post1
+pyOpenSSL==23.3.0
